# openevolve-claude

./: .gitignore  README.md  skill.md
.claude/commands/: evolve-size.md  evolve.md
.evolve/int-parse/: evaluator.py
.evolve/int-parse/mutations/: gen1_alien.rs  gen1_hybrid.rs  gen1_memoize.rs  gen1_restructure.rs  gen1_specialize.rs  gen1_tweak.rs  gen1_unroll.rs  gen1_vectorize.rs  gen2_fastpath.rs  gen2_inline.rs  gen2_restructure.rs  gen3_combined_or.rs  gen3_smallfast.rs  gen3_ultra.rs  gen3_wrapping.rs
.evolve/int-parse/rust/: Cargo.toml
.evolve/sorting/: evaluator.py
.evolve/sorting/mutations/: gen1_counting.rs  gen1_voracious.rs  gen2_skip_zero.rs  gen2_unsafe_ptr.rs
.evolve/sorting/rust/: Cargo.toml
.evolve/string-search/: evaluator.py
.evolve/string-search-test/: evaluator.py
.evolve/string-search-test/mutations/: gen1_hash.rs  gen1_unrolled.rs
.evolve/string-search-test/rust/: Cargo.toml
.evolve/string-search/mutations/: gen1_alien.rs  gen1_hybrid.rs  gen1_memoize.rs  gen1_restructure.rs  gen1_specialize.rs  gen1_tweak.rs  gen1_unroll.rs  gen1_vectorize.rs  gen2_alien.rs  (+11 more)
.evolve/string-search/rust/: Cargo.toml
.evolve/string-search/rust/src/: baselines.rs  benchmark.rs  evolved.rs  lib.rs
showcase/: TEMPLATE.md
showcase/bin-packing-weibull5k/: README.md
showcase/code-golf/: CLAUDE.md  CONTRIBUTING.md  PROJECTION.md  README.md  TOMORROW_PLAN.md  evaluator.py
showcase/int-parse/: evaluator.py  initial_program.rs
showcase/kv-cache-eviction/: README.md
showcase/kv-cache-eviction/rust/: Cargo.toml
showcase/kv-cache-eviction/rust/src/: evolved.rs  fast_bench.rs  lib.rs
showcase/quantization-bit-alloc/: README.md  evolve_gen2_hybrid.json  evolved_champion.json
showcase/quantization-bit-alloc/rust/: Cargo.toml
showcase/quantization-bit-alloc/rust/data/: eval_fast.txt  eval_verify.txt
showcase/quantization-bit-alloc/rust/src/: baselines.rs  benchmark_real.rs  eval_bridge.rs  lib.rs
showcase/santa-2025-packing/: CONTINUE_GEN95.md  EVOLUTION_STATE.md  GEN77_STRATEGY.md  GEN78_STRATEGY.md  GEN81_STRATEGY.md  GEN82_STRATEGY.md  GEN83_STRATEGY.md  GEN84_STRATEGY.md  GEN91_PLAN.md  GEN95_PLAN.md  NEXT_STEPS.md  README.md
showcase/santa-2025-packing/rust/: Cargo.toml  submission.csv
showcase/santa-2025-packing/rust/src/: analyze.rs  baselines.rs  benchmark.rs  evolved.rs  evolved.rs.backup  hybrid.rs  incremental.rs  lib.rs  multistart.rs  simulated_annealing.rs  sparrow.rs  submit.rs
showcase/sort-demo/: evaluator.py
showcase/speculative-decoding-accept/: README.md
showcase/speculative-decoding-accept/rust/: Cargo.toml
showcase/speculative-decoding-accept/rust/data/: .gitkeep
showcase/speculative-decoding-accept/rust/src/: baselines.rs  benchmark.rs  evolved.rs  generate_data.rs  lib.rs
showcase/string-search/: evaluator.py  initial_program.rs
showcase/tsp-2opt-gpu/: README.md
showcase/tsp-2opt-gpu/rust/: Cargo.toml
showcase/tsp-2opt-gpu/rust/src/: baselines.rs  benchmark.rs  benchmark_metal.rs  evolved.rs  lib.rs
(+369 files in other folders)
