[package]
name = "quantization-bit-alloc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "benchmark_real"
path = "src/benchmark_real.rs"

[[bin]]
name = "generate_data"
path = "src/generate_data.rs"
