[package]
name = "santa-2025-packing"
version = "0.1.0"
edition = "2021"

[lib]
name = "santa_packing"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "submit"
path = "src/submit.rs"

[[bin]]
name = "analyze"
path = "src/analyze.rs"

[[bin]]
name = "visualize"
path = "src/bin/visualize.rs"

[dependencies]
rand = "0.8"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
