[package]
name = "speculative-decoding-accept"
version = "0.1.0"
edition = "2021"

[lib]
name = "speculative_decoding"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "generate_data"
path = "src/generate_data.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
